<resources>
    <string name="app_name">Expenses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expenses">Expenses</string>
    <string name="total_income">Total Income</string>
    <string name="total_expense">Total Expense</string>
    <string name="monthly">Monthly</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="summary">Summary</string>
    <string name="total_report">Total Report</string>
    <string name="monthly_report">Monthly Report</string>

</resources>