<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.chart.total.TotalReportFragment">


    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pcTotalReport"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalReportStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvExpenseReportTitle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/expenses"
        android:textColor="@color/colorText"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guidelineVerticalReportStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontalReport" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvIncomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:text="@string/total_income"
        android:textSize="15sp"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toStartOf="@+id/tvIncome"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/guidelineVerticalReportStart"
        app:layout_constraintTop_toBottomOf="@id/tvExpenseReportTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalReportEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvIncomeTitle"
        app:layout_constraintTop_toBottomOf="@id/tvExpenseReportTitle" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvExpensesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:text="@string/total_expense"
        android:textSize="15sp"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toStartOf="@+id/tvExpense"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/guidelineVerticalReportStart"
        app:layout_constraintTop_toBottomOf="@id/tvIncomeTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorText"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalReportEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvExpensesTitle"
        app:layout_constraintTop_toBottomOf="@id/tvIncome" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalReportEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>